Fix bug that caused nav brand element to have both visible and invsible attributes at the same time.

--- a/src/build.css
+++ b/src/build.css
@@ -6,6 +6,9 @@
     border-color:rgb(244 244 245/var(--tw-border-opacity));
 }
 
+.bg-race {
+    background-image: url(./images/race.gif);
+}
 
 .bg-driver {
     background-image: url(./images/driver.jpg);
